Fix overflow in experience section

--- a/_sass/site/_experience.scss
+++ b/_sass/site/_experience.scss
@@ -2,6 +2,10 @@
   padding-top: 6rem;
   padding-bottom: 6rem;
 
+  .wrapper {
+    overflow-x: hidden;
+  }
+
   .section-title {
     text-align: center;
     margin-bottom: 3rem;
