--- a/_sass/site/_skills.scss
+++ b/_sass/site/_skills.scss
@@ -14,7 +14,6 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    overflow-x: hidden;
   }
 
   .section-header {
